[chore] 핵심 로직 및 통합테스트 모듈 분리